test_scores/negative_dimers/features/Q9ULJ1.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q9ULJ1.pkl.xz